# AgentCard

./: .gitignore  README.md  README_PYPI.md  example.yaml  pyproject.toml
agentcard/: __init__.py  core.py
